fix spacing at the bottom of page for nav buttons

--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -334,7 +334,7 @@ nav {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 	margin: 3em auto 0 auto;
-	padding: 0.25em 3em 5em 3em;
+	padding: 0.25em 3em 3em 3em;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 	border-radius: 6px;
 }
@@ -664,7 +664,10 @@ counter-increment: none;
 
 
 .bottom-nav-buttons {
-  margin: 30px 0 30px 0;
+  height: 38px;
+  margin: 18px 0 30px 0;
+  padding: 30px 0 0 0;
+  border-top: 1px solid #6d6d6d;
 }
 
 .page-nav-btn {
@@ -687,7 +690,3 @@ counter-increment: none;
 #next {
   float: right;
 }
-
-/*span.nav-arrow-text {
-  font-size: 9px;
-}*/
